Cleans up some layout issues, adds placeholder

--- a/cure/wwwroot/css/site.css
+++ b/cure/wwwroot/css/site.css
@@ -23,6 +23,10 @@ html {
     border-color: antiquewhite;
 }
 
+.button-box {
+    padding: 5px 5px 5px 5px;
+}
+
 .flat-btn:hover,
 .btn-primary:hover {
     color: rgba(255, 255, 255, .8) !important;
